Add table with favorite car information

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title>Favorite Car!</title>
 </head>
 <body>
-
+  <table border=1>
+    <tr>
+      <th>Type of Car</th>
+      <th>Top Speed</th>
+      <th>Engine Size</th>
+    </tr>
+    <tr>
+      <td>LaFerrari</td>
+      <td>217 mph</td>
+      <td>6.3L V12</td>
+    </tr>
+    <tr>
+      <td>Aston Martin DB10</td>
+      <td>Unknown</td>
+      <td>4.7L V8</td>
+    </tr>
+  </table>
 </body>
 </html>
