Add animal table

--- a/html/table-practice.html
+++ b/html/table-practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Favorite Car!</title>
+  <title>Favorite Car and Favorite Animal!</title>
 </head>
 <body>
   <table border=1>
@@ -21,9 +21,27 @@
       <td>4.7L V8</td>
     </tr>
   </table>
-
+<br>
+<br>
+  <table border=2>
+    <tr>
+      <th>Koala</th>
+      <th>Monkey</th>
+      <th>Lion</th>
+    </tr>
+    <tr>
+      <td rowspan="2">Gray</td>
+      <td>Brown</td>
+      <td>Yellow/orange</td>
+    </tr>
+    <tr>
+      <td>Herbivore</td>
+      <td>Carnivore</td>
+    </tr>
+    <tr>
+      <td colspan="2">Cute</td>
+      <td>agressive</td>
+    </tr>
 </table>
-
-
 </body>
 </html>
