--- a/css/css-demo/index.html
+++ b/css/css-demo/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><link rel="stylesheet" href="styles/elegant-styles.css" type="text/css">
+  <link rel="stylesheet" href="styles/fixed-contact.css" type="text/css">
+   <link rel="stylesheet" href="styles/practice.css" type="text/css">3
   <title>Resume</title>
   <!-- We're using Google Fonts, which you can also do on your sites, but you don't need to know how for any assessments in this unit. -->
   <link href='https://fonts.googleapis.com/css?family=Dancing+Script' rel='stylesheet' type='text/css'>
-  
+
 </head>
 <body>
   <h1 id="resume-title">Resume for Imogen Ary-Perrson</h1>
@@ -22,23 +24,25 @@
     <h2 class="experience-category">Relevant Work Experience</h2>
     <section class="job">
       <h3>General Practitioner, The Circus</h3>
-      <ul>
+      <ul class = "accomplishments">
         <li>Wrangled flaming hula hoops</li>
         <li>Served as first assistant to trapeze team</li>
         <li class="featured">Provided quality assurance for cotton candy</li>
       </ul>
     </section>
     <section class="job">
+
       <h3>Wildlife Wrangler, The Zoo</h3>
-      <ul>
+       <ul class = "accomplishments">
         <li>Trained entire dancing seal troupe</li>
         <li>Regularly chased down escaped tigers</li>
         <li class="featured">Saved a small child from a hungry horse</li>
       </ul>
     </section>
     <section class="job">
+
       <h3>Cone Dipper, Imogen's Ice Cream Shack</h3>
-      <ul>
+        <ul class = "accomplishments">
         <li>Dipped ice cream cones in flavored wax</li>
         <li class="featured">Was employee of the month 12 times a year</li>
         <li>Was the only employee</li>
@@ -47,6 +51,7 @@
   </section>
 
   <section id="volunteer-experience">
+    <ul class = "accomplishments">
     <h2 class="experience-category">Volunteer Experience</h1>
     <section class="volunteer-gig">
       <h3>Little League Coach</h3>
