Link styling.css to document

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" href="styling.css" type="text/css">
 </head>
 <body>
   <img src="glasses.png">
