Add link to the CSS sheet

--- a/css/positioning/index.html
+++ b/css/positioning/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
-  <link rel="stylesheet" href="styling.css" type="text/css">
+  <meta charset=utf-8>
+  <title>TEST</title>
+  <link rel="stylesheet" type="text/css" href="styling.css">
 </head>
 <body>
-  <img src="glasses.png">
-  <img src="hat.png">
-  <img src="octopus.png">
+  <div class="cowboy-octopus">
+    <div id="glasses">
+      <img src="glasses.png">
+    </div>
+    <div id="hat">
+      <img src="hat.png">
+    </div>
+    <div id="octopus">
+      <img src="octopus.png">
+    </div>
+  </div>
 </body>
 </html>
