--- a/css/responsive-design/index.html
+++ b/css/responsive-design/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="style.css" type="text/css">
   <title>Wildflowers Article</title>
 </head>
 <body>
+  <div id="wrap">
   <section id="external-links">
     <h1>External Links</h1>
     <ul>
@@ -37,5 +39,6 @@
       <li>Enjoy.</li>
     </ol>
   </main>
+</div>
 </body>
 </html>
